channelsdir   = $(datadir)/freetuxtv/images/channels
channels_DATA = \
  _none.png \
  ab1.png \
  abmoteurs.png \
  accrotv.png \
  action.png \
  aljazeera.png \
  aljazeerachildren.png \
  aljazeerainternational.png \
  aptv.png \
  argentquebec.png \
  artchannel.png \
  arte.png \
  artplatv.png \
  astrocentertv.png \
  astv.png \
  babylontv.png \
  bambochtv.png \
  bastilletv.png \
  bbcworld.png \
  beurtv.png \
  bfmtv.png \
  biscottetv.png \
  bloombergtv.png \
  boardriderstv.png \
  c9.png \
  calaistv.png \
  canalplus.png \
  canalsavoir.png \
  canaltv.png \
  cheriefm.png \
  cinefx.png \
  cinepolar.png \
  cmusictv.png \
  cnbc.png \
  corriland.png \
  cpac.png \
  demaintv.png \
  direct8.png \
  euronews.png \
  europe1.png \
  fashiontv.png \
  fazzmusic.png \
  fmen.png \
  france2.png \
  france24.png \
  france3.png \
  france4.png \
  france5.png \
  francebleu.png \
  franceculture.png \
  franceinfo.png \
  franceinter.png \
  francemusique.png \
  franceo.png \
  freenewstv.png \
  frequence3.png \
  funradio.png \
  funtv.png \
  gameone.png \
  grossecaisse.png \
  gulli.png \
  guysentv.png \
  idf1.png \
  inraci.png \
  itelevision.png \
  jamzine.png \
  jet.png \
  kto.png \
  labelletv.png \
  lachaineparlementaire.png \
  lalocale.png \
  lcnquebec.png \
  lemouv.png \
  lequipetv.png \
  libertytv.png \
  m6boutique.png \
  m6musicblack.png \
  m6musichits.png \
  m6musicrock.png \
  mangas.png \
  mcm.png \
  mcmpop.png \
  mcmtop.png \
  mezzo.png \
  mfm.png \
  miziktropical.png \
  mjcapt.png \
  mtv.png \
  mtv2.png \
  mtvdance.png \
  mtvhits.png \
  nationalgeographic.png \
  nolife.png \
  nrj12.png \
  nrjhits.png \
  nrjparis.png \
  nt1.png \
  parispremiere.png \
  rmc.png \
  rtl9.png \
  skynewsinternational.png \
  telemelody.png \
  teleplaisance.png \
  telif.png \
  teva.png \
  tfou.png \
  tmc.png \
  tracetv.png \
  turnerclassicmovies.png \
  tv5.png \
  tv8montblanc.png \
  vh1.png \
  vh1classic.png \
  videoclick.png \
  virgin17.png
EXTRA_DIST   = $(channels_DATA)
