channelsdir   = $(datadir)/freetuxtv/images/channels

channels_logodefault = _none.png

channels_logos = \
  100pourcentradio.png \
  1onairconnect.png \
  24kitchentv_hrv.png \
  2mmaroc.png \
  3sat.png \
  3sattv_hrv.png \
  a1infokanaltv_hrv.png \
  a1kanalmjesecatv_hrv.png \
  a1mozaiktv_hrv.png \
  a1test1tv_hrv.png \
  a1test2tv_hrv.png \
  a1test3tv_hrv.png \
  a1test4tv_hrv.png \
  a1test5tv_hrv.png \
  a1test6tv_hrv.png \
  a1test7tv_hrv.png \
  a1test8tv_hrv.png \
  ab1.png \
  abmoteurs.png \
  abudhabitv.png \
  accrotv.png \
  aci.png \
  action.png \
  adofm.png \
  adultchanneltv_hrv.png \
  alexberlin.png \
  almasriya.png \
  alouettefm.png \
  alsace20.png \
  alsatictv.png \
  aljazeerabalkanstv_hrv.png \
  aljazeerachildren.png \
  aljazeeraenglishtv_hrv.png \
  aljazeerainternational.png \
  aljazeera.png \
  amctv_hrv.png \
  america-free-tv.png \
  antenazadar_hrv.png \
  antenazagreb_hrv.png \
  apsaratv.png \
  aptv.png \
  archeotv.png \
  ardalpha.png \
  arenasport1tv_hrv.png \
  arenasport2tv_hrv.png \
  arenasport3tv_hrv.png \
  arenasport4tv_hrv.png \
  arenasport5tv_hrv.png \
  arenasport6tv_hrv.png \
  argentquebec.png \
  armeniapublictv.png \
  armeniatv.png \
  arretsurimages.png \
  artchannel.png \
  artehdtv_hrv.png \
  arte.png \
  artetv_hrv.png \
  artplatv.png \
  astrocentertv.png \
  astv.png \
  aupradio.png \
  automotorundsporttv_hrv.png \
  axnspintv_hrv.png \
  axntv_hrv.png \
  babylontv.png \
  babytv_hrv.png \
  balkanikatv_hrv.png \
  bambochtv.png \
  bangutv_hrv.png \
  banovinatv_hrv.png \
  baraem.png \
  bastilletv.png \
  bbcentertainmenttv_hrv.png \
  bbcfirsttv_hrv.png \
  bbc.png \
  bbcworldnews.png \
  bbcworldnewstv_hrv.png \
  bbcworld.png \
  beijingtv.png \
  bestofshopping.png \
  beurfm.png \
  beurtv.png \
  bfmradio.png \
  bfmtv.png \
  bibeltv.png \
  biscottetv.png \
  bloombergtv.png \
  boardriderstv.png \
  bodyinbalancetv_hrv.png \
  boomerangtv_hrv.png \
  boxhitstv_hrv.png \
  braniteljskiradio_hrv.png \
  brazzerstveuropetv_hrv.png \
  brhd.png \
  bulgariatv.png \
  c9.png \
  calaistv.png \
  canal10tucuman.png \
  canal26.png \
  canal4sanjuan.png \
  canal5tucuman.png \
  canal6posadas.png \
  canal9entrerios.png \
  canalacademie.png \
  canalalgerie.png \
  canalinfonews.png \
  canalmoza.png \
  canalplus.png \
  canalrural.png \
  canalsavoir.png \
  canaltv.png \
  cap24-paris.png \
  carlitv_hrv.png \
  cartoonnetworktv_hrv.png \
  cashtv.png \
  cbnnews.png \
  cbsrealitytv_hrv.png \
  cctv10.png \
  cctv11.png \
  cctv12.png \
  cctv1.png \
  cctv2.png \
  cctv4.png \
  cctv7.png \
  cctv9.png \
  cctvdivertissement.png \
  cctv_e.png \
  cctvf.png \
  cgtntv_hrv.png \
  channelonerussia-orti.png \
  chantefrance.png \
  cheriefm.png \
  chongqing_tv.png \
  cinefirst.png \
  cinefx.png \
  cinemax2hdtv_hrv.png \
  cinemax2tv_hrv.png \
  cinemaxhdtv_hrv.png \
  cinemaxtv_hrv.png \
  cinepolar.png \
  cinestaractionandthrillerhd_hrv.png \
  cinestaractionandthriller_hrv.png \
  cinestarcomedyhdtv_hrv.png \
  cinestarcomedytv_hrv.png \
  cinestarfantasyhdtv_hrv.png \
  cinestarfantasytv_hrv.png \
  cinestarhdtv_hrv.png \
  cinestarpremiere2hdtv_hrv.png \
  cinestarpremiere2tv_hrv.png \
  cinestarpremierehdtv_hrv.png \
  cinestarpremieretv_hrv.png \
  cinestartv_hrv.png \
  cityradio_hrv.png \
  ckiafm.png \
  claptv.png \
  clermontpremiere.png \
  clubbingtv.png \
  cmctv_hrv.png \
  cmusictv.png \
  cnbc.png \
  cnbctv_hrv.png \
  cnntv_hrv.png \
  comedycentralextratv_hrv.png \
  contactfm.png \
  corriland.png \
  couleur3-rsr.png \
  cpac.png \
  ct2e.png \
  daserstehd.png \
  daserstehdtv_hrv.png \
  davincitv_hrv.png \
  demaintv.png \
  deutschewelletv_hrv.png \
  diadoratv_hrv.png \
  digitalimpulse_hrv.png \
  direct8.png \
  directstar.png \
  divatv_hrv.png \
  dizi_hrv.png \
  dmctv_hrv.png \
  dmsattv_hrv.png \
  docuboxtv_hrv.png \
  dokutv_hrv.png \
  domahdtv_hrv.png \
  domatv_hrv.png \
  dorcelhdtv_hrv.png \
  dorceltv_hrv.png \
  dorftv.png \
  drfittv_hrv.png \
  dubaione.png \
  dubaitv.png \
  ducktv_hrv.png \
  dunatv_hrv.png \
  dusktv_hrv.png \
  dutv_hrv.png \
  dwtv-deutschewelle.png \
  ebs.png \
  ekodesgarrigues.png \
  entertainmenttv_hrv.png \
  enterzagreb_hrv.png \
  epicdramatv_hrv.png \
  equidia.png \
  ertworld.png \
  espacefm.png \
  espacemusique.png \
  esportstv_hrv.png \
  etbsat.png \
  eurochanneltv_hrv.png \
  euronews.png \
  euronewstv_hrv.png \
  europe1.png \
  eurosport1tv_hrv.png \
  eurosport2tv_hrv.png \
  evasionfm.png \
  extra3channel.png \
  extrafm_hrv.png \
  extratv_hrv.png \
  extremesportstv_hrv.png \
  fashiontelevisiontv_hrv.png \
  fashiontv.png \
  fastandfuntv_hrv.png \
  fazzmusic.png \
  fcradiolessentiel.png \
  federalnatv_hrv.png \
  fightchanneltv_hrv.png \
  fightchannelworldtv_hrv.png \
  filmboxarthousetv_hrv.png \
  filmboxextrahdtv_hrv.png \
  filmboxextratv_hrv.png \
  filmboxplushdtv_hrv.png \
  filmboxplustv_hrv.png \
  filmboxpremiumhdtv_hrv.png \
  filmboxpremiumtv_hrv.png \
  filmboxstars_hrv.png \
  finelivingtv_hrv.png \
  fip.png \
  flyfm.png \
  fmen.png \
  foodnetworktv_hrv.png \
  foxcrimetv_hrv.png \
  foxlife.png \
  foxlifetv_hrv.png \
  foxmoviestv_hrv.png \
  foxnewstv_hrv.png \
  foxtv_hrv.png \
  france24.png \
  france2.png \
  france3.png \
  france4.png \
  france5.png \
  francebleu.png \
  franceculture.png \
  franceenglishtv_hrv.png \
  franceinfo.png \
  franceinter.png \
  francemusique.png \
  franceo.png \
  franceteleachat.png \
  francetv_hrv.png \
  francevivace.png \
  freenewstv.png \
  frequence3.png \
  frequenceindia.png \
  fueltv_hrv.png \
  fulltv_hrv.png \
  funradio.png \
  funtv.png \
  gamebartv_hrv.png \
  gameonemusichd.png \
  gameone.png \
  gametoonhdtv_hrv.png \
  gametoontv_hrv.png \
  ginxtv_hrv.png \
  godtv.png \
  goldfm_hrv.png \
  golicatv_hrv.png \
  gong.png \
  grandlille_tv.png \
  grandtv_hrv.png \
  grossecaisse.png \
  grradvirovitica_hrv.png \
  guangdongsoutherntv.png \
  gulli.png \
  guysentv.png \
  happytv_hrv.png \
  hayatplustv_hrv.png \
  hbo2hdtv_hrv.png \
  hbo2tv_hrv.png \
  hbo3hdtv_hrv.png \
  hbo3tv_hrv.png \
  hbohdtv_hrv.png \
  hbotv_hrv.png \
  hebei_tv.png \
  heilongjiangtv.png \
  hilaltv.png \
  hiscore.png \
  historyhdtv_hrv.png \
  historytv_hrv.png \
  hitmusictv.png \
  hitradosinj_hrv.png \
  hitwest.png \
  hkr_hrv.png \
  hntvtv_hrv.png \
  horrorchanneltv_hrv.png \
  hrcak_hrv.png \
  hr.png \
  hrradiokarlovac_hrv.png \
  hrradiovalpovstina_hrv.png \
  hrradiovukovar_hrv.png \
  hrt1tv_hrv.png \
  hrt2tv_hrv.png \
  hrt3tv_hrv.png \
  hrt4tv_hrv.png \
  hrthr1_hrv.png \
  hrthr2_hrv.png \
  hrthr3_hrv.png \
  hrthrdubrovnik_hrv.png \
  hrthrglashrv_hrv.png \
  hrthrknin_hrv.png \
  hrthrosijek_hrv.png \
  hrthrpula_hrv.png \
  hrthrrijeka_hrv.png \
  hrthrsljeme_hrv.png \
  hrthrsplit_hrv.png \
  hrthrzadar_hrv.png \
  HRTinttv_hrv.png \
  hrtradio_hrv.png \
  hunansatellitetv.png \
  hustlerhdtv_hrv.png \
  hustlertvtv_hrv.png \
  idf1.png \
  idjtv_hrv.png \
  imedtv.png \
  infosport.png \
  inraci.png \
  inspirationnetwork.png \
  ishtartv.png \
  itelevision.png \
  jabukatv_hrv.png \
  jadrantv_hrv.png \
  jamzine.png \
  jazzradioblack.png \
  jazzradioblues.png \
  jazzradio-exfrequencejazz.png \
  jazzradioladies.png \
  jazzradiolounge.png \
  jazzradioreprises.png \
  jet.png \
  jimjamtv_hrv.png \
  jordansatellitechannel.png \
  jpopsukitv.png \
  jugotontv_hrv.png \
  jukebox.png \
  kanal24.png \
  kanal5tv_hrv.png \
  kanal7int.png \
  kanalavrupa.png \
  kanalritv_hrv.png \
  kcn2musictv_hrv.png \
  kcn3svettv_hrv.png \
  kerrangtv_hrv.png \
  kieltv.png \
  kika.png \
  kikatv_hrv.png \
  kinohdtv_hrv.png \
  kinotv_hrv.png \
  kiss-fm.png \
  kisstv_hrv.png \
  klapeitamburetv_hrv.png \
  klasiktv_hrv.png \
  klfm_hrv.png \
  kreatortv_hrv.png \
  krugoval_hrv.png \
  kto.png \
  kucniljubimci_hrv.png \
  kuwaittv1.png \
  kuwaittv2.png \
  labelletv.png \
  lachainechinoise.png \
  lachainedejiangsu.png \
  lachaineparlementaire.png \
  laganinifm_hrv.png \
  lalocale.png \
  laradiodelamer.png \
  laudatotv_hrv.png \
  lcm-marseille.png \
  lcnquebec.png \
  lemouv.png \
  lequipetv.png \
  libertastv_hrv.png \
  libertytv.png \
  localesidf.png \
  loviribolovtv_hrv.png \
  luxetv_hrv.png \
  luxetv.png \
  m1familytv_hrv.png \
  m1filmtv_hrv.png \
  m1goldtv_hrv.png \
  m6boutique.png \
  m6musicblack.png \
  m6musicclub.png \
  m6musichits.png \
  m6musicrock.png \
  m6.png \
  magictv_hrv.png \
  mangas.png \
  mboatv.png \
  mce-ma_chaine_etudiante.png \
  mcm.png \
  mcmpop.png \
  mcmtop.png \
  mdr.png \
  medi1sat.png \
  mediaservis_hrv.png \
  mediasetitaliatv_hrv.png \
  megamixradiohvar_hrv.png \
  mellotv.png \
  metropolys.png \
  mezzo.png \
  mezzotv_hrv.png \
  mfmflashback.png \
  mfm.png \
  mfmserenite.png \
  mfmsexy.png \
  mgmoviegenerationtv_hrv.png \
  minitv_hrv.png \
  mixxradio.png \
  miziktropical.png \
  mjcapt.png \
  mktvsattv_hrv.png \
  modem-radio.png \
  montecarlodoualiya.png \
  montereybayaquarium.png \
  mosaiquefm.png \
  mplusm.png \
  mrezasttv_hrv.png \
  mrezazgtv_hrv.png \
  mtv2.png \
  mtvclubtv_hrv.png \
  mtvdanceinternationaltv_hrv.png \
  mtvdance.png \
  mtvdevedesettv_hrv.png \
  mtvhitsinternationaltv_hrv.png \
  mtvhits.png \
  mtvmusictv_hrv.png \
  mtvosamdesettv_hrv.png \
  mtv.png \
  mtvrocksinternationaltv_hrv.png \
  mtvtv_hrv.png \
  musicplusclassicrock.png \
  musicplushits.png \
  musicpluspoprock.png \
  myzentv_hrv.png \
  myzentv.png \
  n1hrtv_hrv.png \
  n24tv_hrv.png \
  narodnitv_hrv.png \
  nasatv.png \
  natgeomusic.png \
  nationalgeographic.png \
  nationalgeohdtv_hrv.png \
  nationalgeotv_hrv.png \
  nationalwildhdtv_hrv.png \
  nationalwildtv_hrv.png \
  nauticalchanneltv_hrv.png \
  naxi80radio_hrv.png \
  ndr.png \
  nhk.png \
  nickjrtv_hrv.png \
  nicktoonstv_hrv.png \
  nicktv_hrv.png \
  nightmagcom.png \
  nolife.png \
  normandietv.png \
  nostalgie.png \
  novabatv_hrv.png \
  novacinematv_hrv.png \
  novafamilytv_hrv.png \
  novahdtv_hrv.png \
  novamtv_hrv.png \
  novastv_hrv.png \
  novatv_hrv.png \
  novaworldtv_hrv.png \
  noviradiodjakovo_hrv.png \
  noviradiozd_hrv.png \
  nrj12.png \
  nrjhits.png \
  nrjnouveautes.png \
  nrjparis.png \
  nrj.png \
  nrwision.png \
  nt1.png \
  nti.png \
  oe24tv.png \
  okanaltv_hrv.png \
  okdessau.png \
  okfulda.png \
  okgiessen.png \
  okkaiserslautern.png \
  okkassel.png \
  okkoblenz.png \
  okmagdeburg.png \
  okmerseburg.png \
  oknahetv.png \
  okrheinlokal.png \
  okrheinmain.png \
  oksalzwedel.png \
  okstendal.png \
  oksuedwestpfalz.png \
  okto.png \
  oktrier.png \
  okweinstrasse.png \
  okwernigerode.png \
  okwettin.png \
  onehd.png \
  orangesportinfos.png \
  orf1hd.png \
  orf2hd.png \
  orf3hd.png \
  orfsportplushd.png \
  ori_hrv.png \
  orleanstv.png \
  osjeckatv_hrv.png \
  otvoreniradio_hrv.png \
  otvvalentinotv_hrv.png \
  ouesttv.png \
  ouifm.png \
  oxyradio.png \
  ozradio.png \
  parentheseradio.png \
  parispremiere.png \
  parlament.png \
  petrinjskiradio_hrv.png \
  phoenixchinesenewsandentertainment.png \
  phoenixinfonews.png \
  phoenix.png \
  physiquetv.png \
  pickboxtv_hrv.png \
  pikabootv_hrv.png \
  pinkplustv_hrv.png \
  pitomiradio_hrv.png \
  planetearthtv_hrv.png \
  planetsport1tv_hrv.png \
  planetsport2tv_hrv.png \
  planetsport3tv_hrv.png \
  planetsport4tv_hrv.png \
  planetsport5tv_hrv.png \
  planetsportgledajtv_hrv.png \
  planetsportpromohdtv_hrv.png \
  playboytv_hrv.png \
  podravskiradio_hrv.png \
  pokerchannel.png \
  poljoprivrednatv_hrv.png \
  pomorskiradio_hrv.png \
  powerturktv.png \
  pozitivtv_hrv.png \
  presstv.png \
  privatetv_hrv.png \
  pro7tv_hrv.png \
  publicsenat.png \
  purebabestv_hrv.png \
  purescreens.png \
  radio051_hrv.png \
  radio057_hrv.png \
  radio101_hrv.png \
  radio808_hrv.png \
  radio8.png \
  radiobaranja_hrv.png \
  radiobbr_hrv.png \
  radiobenkovac_hrv.png \
  radiobiogradnamoru_hrv.png \
  radioblagovest_hrv.png \
  radioborovo_hrv.png \
  radiobrac_hrv.png \
  radiocanada.png \
  radiocean.png \
  radiocentporec_hrv.png \
  radioclapas.png \
  radioclassique.png \
  radio-corsica.png \
  radiocrash_hrv.png \
  radiodalmacija_hrv.png \
  radiodaruvar_hrv.png \
  radiodeejay_hrv.png \
  radiodeltametkovic_hrv.png \
  radiodevetdva_hrv.png \
  radiodjakovo_hrv.png \
  radiodonjimiholjac_hrv.png \
  radiodrava_hrv.png \
  radiodrnis_hrv.png \
  radiodunav_hrv.png \
  radioethic.png \
  radioeurostar_hrv.png \
  radiofgamerica.png \
  radiofgchic.png \
  radiofgclassics.png \
  radiofgdance.png \
  radiofg.png \
  radiofgunderground.png \
  radioglaspodravine_hrv.png \
  radiogorkot_hrv.png \
  radiogrubisnopolje_hrv.png \
  radiohrvzagorjekrap_hrv.png \
  radioicietmaintenant.png \
  radioilok_hrv.png \
  radioimotski_hrv.png \
  radioistra_hrv.png \
  radiojaska_hrv.png \
  radiojedan_hrv.png \
  radiojunior.png \
  radiokaj_hrv.png \
  radiokoprivnica_hrv.png \
  radiokorcula_hrv.png \
  radiokorzo_hrv.png \
  radiokrizevci_hrv.png \
  radiolabin_hrv.png \
  radiolatina.png \
  radiolibertaire.png \
  radioludbreg_hrv.png \
  radiomaestral_hrv.png \
  radiomakarskarivijera_hrv.png \
  radiomarija_hrv.png \
  radiomartin_hrv.png \
  radiomax_hrv.png \
  radiomegaton_hrv.png \
  radiomelodie.png \
  radiom_hrv.png \
  radiomir_hrv.png \
  radiomontblanc.png \
  radiomoslavina_hrv.png \
  radiomozaik_hrv.png \
  radiomreznica_hrv.png \
  radionasice_hrv.png \
  radioneo.png \
  radionotredame.png \
  radionovagradiska_hrv.png \
  radionova.png \
  radionovimarof_hrv.png \
  radionovska_hrv.png \
  radionulpetjedan_hrv.png \
  radionulpetsedam_hrv.png \
  radioogulin_hrv.png \
  radioo.png \
  radioosamnulosam_hrv.png \
  radiootocac_hrv.png \
  radiootokkrk_hrv.png \
  radioprkos_hrv.png \
  radiopublicsante.png \
  radioquirinus_hrv.png \
  radiorab_hrv.png \
  radiorahovica_hrv.png \
  radioritam_hrv.png \
  radiosamobor_hrv.png \
  radioscoop80s.png \
  radioscoopmusicpod.png \
  radioscoop.png \
  radio-scoop-powerdance.png \
  radiosibenik_hrv.png \
  radiosingsing.png \
  radiosisak_hrv.png \
  radiosjeverozapad_hrv.png \
  radioskaut_hrv.png \
  radioslatina_hrv.png \
  radioslavonija_hrv.png \
  radioslunj_hrv.png \
  radiostar.png \
  radiostojedan_hrv.png \
  radiostopet_hrv.png \
  radiostubica_hrv.png \
  radiostudent_hrv.png \
  radiosunce_hrv.png \
  radiosun.png \
  radiosvetanedelja_hrv.png \
  radioterezija_hrv.png \
  radiotrogir_hrv.png \
  radio-tropicale.png \
  radioval_hrv.png \
  radiovalisaurea_hrv.png \
  radiovinkovci_hrv.png \
  radiovirovitica_hrv.png \
  radiovrbovec_hrv.png \
  radiozelina_hrv.png \
  radiozlatar_hrv.png \
  radiozupanja_hrv.png \
  raidue.png \
  raiduetv_hrv.png \
  railtv.png \
  rainews24tv_hrv.png \
  rai.png \
  raiscuolatv_hrv.png \
  raistoriatv_hrv.png \
  raitre.png \
  raitretv_hrv.png \
  raiuno.png \
  raiunotv_hrv.png \
  rbb.png \
  rbg.png \
  rbtv.png \
  rdicanada.png \
  realitykingstv_hrv.png \
  recordinternacional.png \
  relaxtv.png \
  renaulttv.png \
  reservoirfilms.png \
  rfi.png \
  rfm.png \
  rfo.png \
  rireetchansons.png \
  rkingtv.png \
  rmc.png \
  rmn.png \
  rne.png \
  rocktv.png \
  rossija24.png \
  rovinjfm_hrv.png \
  rsr-suisse.png \
  rtbf.png \
  rtbtv_hrv.png \
  rtcgsat.png \
  rtcgtv_hrv.png \
  rtcteleliege.png \
  rtl2.png \
  rtl2tv_hrv.png \
  rtl9.png \
  rtlcrimetv_hrv.png \
  rtlkockicatv_hrv.png \
  rtllivingtv_hrv.png \
  rtlpassiontv_hrv.png \
  rtl.png \
  rtltv_hrv.png \
  rtpi.png \
  rtrplaneta.png \
  rts1tv_hrv.png \
  rts2tv_hrv.png \
  rtsfm.png \
  rtssvettv_hrv.png \
  rtv1tv_hrv.png \
  rtv2tv_hrv.png \
  russiatoday.png \
  russiatodaytv_hrv.png \
  rve.png \
  sabcnews.png \
  saborskatv_hrv.png \
  samanyolutv.png \
  samobortv_hrv.png \
  sbtv_hrv.png \
  scifitv_hrv.png \
  scooptv_hrv.png \
  seebittv.png \
  servustvhd.png \
  shanghaidragontv.png \
  shenzhen_tv.png \
  sjevernifm_hrv.png \
  sk1hdtv_hrv.png \
  sk1tv_hrv.png \
  sk2hdtv_hrv.png \
  sk2tv_hrv.png \
  sk3hdtv_hrv.png \
  sk3tv_hrv.png \
  sk4hdtv_hrv.png \
  sk4tv_hrv.png \
  sk5hdtv_hrv.png \
  sk5tv_hrv.png \
  sk6hdtv_hrv.png \
  sk6tv_hrv.png \
  skgolfhdtv_hrv.png \
  skgolftv_hrv.png \
  skhdtv_hrv.png \
  skynewsinternational.png \
  skynews.png \
  skynewstv_hrv.png \
  skyrock.png \
  slavonskiradio_hrv.png \
  slo1tv_hrv.png \
  slo2tv_hrv.png \
  slo3tv_hrv.png \
  smileofachildtv_hrv.png \
  soleil_la_radio.png \
  soleiltv.png \
  soundsetragusa_hrv.png \
  souvenirfromearth.png \
  sport1tv_hrv.png \
  sportskatelevizijatv_hrv.png \
  sportskooltv_hrv.png \
  srcetv_hrv.png \
  srhd.png \
  stingray_hrv.png \
  stlfm.png \
  stoptv_hrv.png \
  studentskiradiounios_hrv.png \
  studiom_hrv.png \
  stv_hrv.png \
  sudradio.png \
  superradio_hrv.png \
  suroyotv.png \
  swrhd.png \
  tagesschau24.png \
  tcmcntv_hrv.png \
  tdctv_hrv.png \
  tele102.png \
  teleblagon.png \
  telegrenoble.png \
  telemelody.png \
  telenantes.png \
  telenight.png \
  telenova.png \
  teleplaisance.png \
  telessonne.png \
  telesur.png \
  televisionsavoir.png \
  telif.png \
  tempomix.png \
  teva.png \
  tf1.png \
  tfou.png \
  tfouwebtv.png \
  tijitv_hrv.png \
  tllteleloire.png \
  tlm-lyon.png \
  tlt-toulouse.png \
  tmc.png \
  tna.png \
  tn.png \
  topmusic.png \
  tracetropical.png \
  tracetv.png \
  traceurbantv_hrv.png \
  travelchanneltv_hrv.png \
  travelxptv_hrv.png \
  trendtv_hrv.png \
  tropiquesfm.png \
  trt1.png \
  trtcocuk.png \
  trtint.png \
  trtworld.png \
  tsfjazz.png \
  turnerclassicmovies.png \
  tv1000_hrv.png \
  tv34.png \
  tv3cat-extvci.png \
  tv5mondetv_hrv.png \
  tv5.png \
  tv7bordeaux.png \
  tv7tunisia.png \
  tv8montblanc.png \
  tv8moselleest.png \
  tvaquebec.png \
  tvbiznes.png \
  tvbnsattv_hrv.png \
  tveint.png \
  tvespanatv_hrv.png \
  tvfil78.png \
  tvistratv_hrv.png \
  tvmeurope-exrtm1-rtmmaroc.png \
  tvnovatv_hrv.png \
  tvpi.png \
  tvpolonia-tvp.png \
  tvromania.png \
  tvsf.png \
  tvsibeniktv_hrv.png \
  tvtours.png \
  tvt.png \
  tvvi.png \
  tvzapadtv_hrv.png \
  ultrasplit_hrv.png \
  uniduradio_hrv.png \
  urbaniatv.png \
  vavoomtv_hrv.png \
  vesti.png \
  vh1classic.png \
  vh1classictv_hrv.png \
  vh1.png \
  vh1tv_hrv.png \
  viasatexploretv_hrv.png \
  viasathistorytv_hrv.png \
  viasatnaturetv_hrv.png \
  vibration.png \
  videoclick.png \
  vietnam-vtv4.png \
  virgin17.png \
  virginradio.png \
  virgintv_hrv.png \
  vktv_hrv.png \
  voiceofamerica.png \
  voltage.png \
  voxafrica.png \
  voxtv_hrv.png \
  vtv_hrv.png \
  w24tv.png \
  w9.png \
  wdrhd.png \
  welt.png \
  weo.png \
  wnesstv_hrv.png \
  womantv_hrv.png \
  worldfashion.png \
  xiamenstartv.png \
  yammatfm_hrv.png \
  yementv.png \
  z1tv_hrv.png \
  zagorskiradio_hrv.png \
  zahratv.png \
  zdf_de.png \
  zdfhdtv_hrv.png \
  zdfinfohd.png \
  zdfneohd.png \
  zdravatv_hrv.png \
  zfm_hrv.png \
  zhejiangstartv.png \
  zona31.png

if LOGOS_INSTALL
channels_DATA = $(channels_logodefault) $(channels_logos)
else
channels_DATA = $(channels_logodefault)
endif

EXTRA_DIST   = $(channels_DATA)
