channelsdir   = $(datadir)/freetuxtv/images/channels
channels_DATA = _none.png \
								ab1.png \
								aljazeera.png \
								arte.png \
								bfmtv.png \
								canalplus.png \
								direct8.png \
								euronews.png \
								france2.png \
								france3.png \
								france4.png \
								france5.png \
								france24.png \
								franceo.png \
								freenewstv.png \
								gameone.png \
								gulli.png \
								itelevision.png \
								lcp.png \
								libertytv.png \
								m6musicblack.png \
								m6musichits.png \
								m6musicrock.png \
								mcm.png \
								mcmtop.png \
								nrj12.png \
								nt1.png \
								rtl9.png \
								tmc.png \
								tracetv.png \
								tv5.png \
								virgin17.png
EXTRA_DIST   = $(channels_DATA)
