channelsdir   = $(datadir)/freetuxtv/images/channels
channels_DATA = \
  _none.png \
  ab1.png \
  abmoteurs.png \
  accrotv.png \
  action.png \
  aljazeera.png \
  aljazeerachildren.png \
  aljazeerainternational.png \
  aptv.png \
  argentquebec.png \
  arretsurimages.png \
  artchannel.png \
  arte.png \
  artplatv.png \
  astrocentertv.png \
  astv.png \
  babylontv.png \
  bambochtv.png \
  bastilletv.png \
  bbcworld.png \
  bbcworldnews.png \
  beijingtv.png \
  beurtv.png \
  bfmtv.png \
  biscottetv.png \
  bloombergtv.png \
  boardriderstv.png \
  c9.png \
  calaistv.png \
  canalplus.png \
  canalsavoir.png \
  canaltv.png \
  cctv4.png \
  cctv9.png \
  cctvdivertissement.png \
  cctvf.png \
  cheriefm.png \
  cinefirst.png \
  cinefx.png \
  cinepolar.png \
  clubbingtv.png \
  cmusictv.png \
  cnbc.png \
  corriland.png \
  cpac.png \
  demaintv.png \
  direct8.png \
  euronews.png \
  europe1.png \
  fashiontv.png \
  fazzmusic.png \
  fmen.png \
  foxlife.png \
  france2.png \
  france24.png \
  france3.png \
  france4.png \
  france5.png \
  francebleu.png \
  franceculture.png \
  franceinfo.png \
  franceinter.png \
  francemusique.png \
  franceo.png \
  freenewstv.png \
  frequence3.png \
  funradio.png \
  funtv.png \
  gameone.png \
  grossecaisse.png \
  guangdongsoutherntv.png \
  gulli.png \
  guysentv.png \
  hunansatellitetv.png \
  idf1.png \
  inraci.png \
  itelevision.png \
  jamzine.png \
  jet.png \
  jukebox.png \
  kto.png \
  labelletv.png \
  lachainechinoise.png \
  lachaineparlementaire.png \
  lalocale.png \
  lcnquebec.png \
  lemouv.png \
  lequipetv.png \
  libertytv.png \
  m6boutique.png \
  m6musicblack.png \
  m6musicclub.png \
  m6musichits.png \
  m6musicrock.png \
  mangas.png \
  mcm.png \
  mcmpop.png \
  mcmtop.png \
  mezzo.png \
  mfm.png \
  miziktropical.png \
  mjcapt.png \
  mtv.png \
  mtv2.png \
  mtvdance.png \
  mtvhits.png \
  natgeomusic.png \
  nationalgeographic.png \
  nightmagcom.png \
  nolife.png \
  normandietv.png \
  nostalgie.png \
  nrj.png \
  nrj12.png \
  nrjhits.png \
  nrjparis.png \
  nt1.png \
  orleanstv.png \
  ouesttv.png \
  ouifm.png \
  parispremiere.png \
  phoenixchinesenewsandentertainment.png \
  phoenixinfonews.png \
  radiofg.png \
  radiolibertaire.png \
  radionova.png \
  railtv.png \
  rdicanada.png \
  relaxtv.png \
  rfm.png \
  rireetchansons.png \
  rmc.png \
  rocktv.png \
  rtl2.png \
  rtl9.png \
  rve.png \
  sabcnews.png \
  shanghaidragontv.png \
  skynewsinternational.png \
  skyrock.png \
  tele102.png \
  teleblagon.png \
  telegrenoble.png \
  telemelody.png \
  telenight.png \
  teleplaisance.png \
  telessonne.png \
  telif.png \
  teva.png \
  tfou.png \
  tfouwebtv.png \
  tllteleloire.png \
  tmc.png \
  tracetropical.png \
  tracetv.png \
  turnerclassicmovies.png \
  tv5.png \
  tv8montblanc.png \
  tvaquebec.png \
  tvpi.png \
  vh1.png \
  vh1classic.png \
  videoclick.png \
  virgin17.png \
  virginradio.png \
  xiamenstartv.png \
	zhejiangstartv.png
EXTRA_DIST   = $(channels_DATA)
