channelsdir   = $(datadir)/freetuxtv/images/channels
channels_DATA = \
  _none.png \
  1onairconnect.png \
  100pourcentradio.png \
  2mmaroc.png \
  ab1.png \
  abmoteurs.png \
  accrotv.png \
  action.png \
  adofm.png \
  aljazeera.png \
  aljazeerachildren.png \
  aljazeerainternational.png \
  alouettefm.png \
  alsatictv.png \
  apsaratv.png \
  aptv.png \
  argentquebec.png \
  arretsurimages.png \
  artchannel.png \
  arte.png \
  artplatv.png \
  astrocentertv.png \
  astv.png \
  aupradio.png \
  babylontv.png \
  bambochtv.png \
  bastilletv.png \
  bbcworld.png \
  bbcworldnews.png \
  beijingtv.png \
  bestofshopping.png \
  beurfm.png \
  beurtv.png \
  bfmradio.png \
  bfmtv.png \
  biscottetv.png \
  bloombergtv.png \
  boardriderstv.png \
  c9.png \
  calaistv.png \
  canalacademie.png \
  canalalgerie.png \
  canalplus.png \
  canalsavoir.png \
  canaltv.png \
  cap24-paris.png \
  cctv1.png \
  cctv2.png \
  cctv4.png \
  cctv7.png \
  cctv9.png \
  cctv10.png \
  cctv11.png \
  cctv12.png \
  cctvdivertissement.png \
  cctv_e.png \
  cctvf.png \
  channelonerussia-orti.png \
  cheriefm.png \
  chongqing_tv.png \
  cinefirst.png \
  cinefx.png \
  cinepolar.png \
  clermontpremiere.png \
  clubbingtv.png \
  cmusictv.png \
  cnbc.png \
  contactfm.png \
  corriland.png \
  couleur3-rsr.png \
  cpac.png \
  demaintv.png \
  direct8.png \
  dwtv-deutschewelle.png \
  ekodesgarrigues.png \
  euronews.png \
  europe1.png \
  espacefm.png \
  espacemusique.png \
  evasionfm.png \
  fashiontv.png \
  fazzmusic.png \
  fcradiolessentiel.png \
  fip.png \
  flyfm.png \
  fmen.png \
  foxlife.png \
  france2.png \
  france24.png \
  france3.png \
  france4.png \
  france5.png \
  francebleu.png \
  franceculture.png \
  franceinfo.png \
  franceinter.png \
  francemusique.png \
  franceo.png \
  francevivace.png \
  freenewstv.png \
  frequence3.png \
  frequenceindia.png \
  funradio.png \
  funtv.png \
  gameone.png \
  gameonemusichd.png \
  grandlille_tv.png \
  grossecaisse.png \
  guangdongsoutherntv.png \
  gulli.png \
  guysentv.png \
  hebei_tv.png \
  heilongjiangtv.png \
  hitwest.png \
  hunansatellitetv.png \
  idf1.png \
  inraci.png \
  itelevision.png \
  jamzine.png \
  jazzradioblack.png \
  jazzradioblues.png \
  jazzradio-exfrequencejazz.png \
  jazzradioladies.png \
  jazzradiolounge.png \
  jazzradioreprises.png \ 
  jet.png \
  jukebox.png \
  kto.png \
  labelletv.png \
  lachainechinoise.png \
  lachainedejiangsu.png \
  lachaineparlementaire.png \
  lalocale.png \
  laradiodelamer.png \
  lcnquebec.png \
  lcm-marseille.png \
  lemouv.png \
  lequipetv.png \
  libertytv.png \
  localesidf.png \
  luxetv.png \
  m6boutique.png \
  m6musicblack.png \
  m6musicclub.png \
  m6musichits.png \
  m6musicrock.png \
  mangas.png \
  mcm.png \
  mcmpop.png \
  mcmtop.png \
  medi1sat.png \
  mezzo.png \
  mfm.png \
  mfmflashback.png \
  mfmserenite.png \
  mfmsexy.png \
  miziktropical.png \
  mjcapt.png \
  montecarlodoualiya.png \
  mosaiquefm.png \
  mplusm.png \
  mtv.png \
  mtv2.png \
  mtvdance.png \
  mtvhits.png \
  nasatv.png \
  natgeomusic.png \
  nationalgeographic.png \
  nhk.png \
  nightmagcom.png \
  nolife.png \
  normandietv.png \
  nostalgie.png \
  nrj.png \
  nrj12.png \
  nrjhits.png \
  nrjnouveautes.png \
  nrjparis.png \
  nt1.png \
  nti.png \
  orleanstv.png \
  ozradio.png \
  ouesttv.png \
  ouifm.png \
  parispremiere.png \
  parentheseradio.png \
  phoenixchinesenewsandentertainment.png \
  phoenixinfonews.png \
  publicsenat.png \
  radio8.png \
  radiocean.png \
  radioclapas.png \
  radioclassique.png \
  radioethic.png \
  radiofg.png \
  radiofgamerica.png \
  radiofgchic.png \
  radiofgclassics.png \
  radiofgdance.png \
  radiofgunderground.png \
  radioicietmaintenant.png \
  radiojunior.png \
  radiolatina.png \
  radiolibertaire.png \
  radiomelodie.png \
  radioneo.png \
  radionotredame.png \
  radionova.png \
  radiopublicsante.png \
  radioscoop80s.png \
  radioscoopboxvintage.png \
  radioscoopmusicpod.png \
  radioscoop.png \
  radiostar.png \
  radiosun.png \
  raidue.png \
  railtv.png \
  raitre.png \
  raiuno.png \
  rbg.png \
  rdicanada.png \
  relaxtv.png \
  rfi.png \
  rfm.png \
  rireetchansons.png \
  rmc.png \
  rmn.png \
  rocfm.png \
  rocktv.png \
  rtl.png \
  rtl2.png \
  rtl9.png \
  rtpi.png \
  rtrplaneta.png \
  rtsfm.png \
  russiatoday.png \
  rve.png \
  sabcnews.png \
  shanghaidragontv.png \
  shenzhen_tv.png \
  skynews.png \
  skynewsinternational.png \
  skyrock.png \
  soleil_la_radio.png \
  souvenirfromearth.png \
  sudradio.png \
  tele102.png \
  teleblagon.png \
  telegrenoble.png \
  telemelody.png \
  telenantes.png \
  telenight.png \
  teleplaisance.png \
  telessonne.png \
  telif.png \
  tempomix.png \ 
  teva.png \
  tfou.png \
  tfouwebtv.png \
  tllteleloire.png \
  tlm-lyon.png \
  tlt-toulouse.png \
  tmc.png \
  topmusic.png \
  tracetropical.png \
  tracetv.png \
  trtint.png \
  tsfjazz.png \
  turnerclassicmovies.png \
  tv5.png \
  tv7bordeaux.png \
  tv7tunisia.png \
  tv8montblanc.png \
  tvaquebec.png \
  tveint.png \
  tvpi.png \
  tvpolonia-tvp.png \
  tvtours.png \
  vesti.png \
  vh1.png \
  vh1classic.png \
  vibration.png \
  videoclick.png \
  virgin17.png \
  virginradio.png \
  voltage.png \
  worldfashion.png \
  xiamenstartv.png \
  zdf_de.png \
	zhejiangstartv.png
EXTRA_DIST   = $(channels_DATA)
